other-cel/restrict-loadbalancer/.chainsaw-test/svc-bad.yaml
apiVersion: v1
kind: Service
metadata:
  name: badsvc01
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
