other-cel/restrict-loadbalancer/.chainsaw-test/svc-good.yaml
apiVersion: v1
kind: Service
metadata:
  name: goodsvc01
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
  type: NodePort
